--- a/style.css
+++ b/style.css
@@ -188,6 +188,17 @@ li a:focus {
     color: white;
 }
 
+.btn-dark-outline:hover a {
+    background-color: #282828;
+    color: white;
+}
+
+.btn-dark-outline a {
+    text-decoration: none;
+    color: #282828;
+}
+
+
 .btn-light-outline {
     text-decoration: none;
     font-family: Gabriola, sans-serif;
@@ -340,7 +351,17 @@ li a:focus {
     border: none;
 }
 
+.content button a {
+    text-decoration: none;
+    color: white;
+}
+
 .content button:hover {
+    font-size: 30px;
+    width: 230px;
+}
+
+.content button:hover a{
     font-size: 30px;
     width: 230px;
 }
